--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,10 +1,10 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.1.1/schema.json",
-  "changelog": ["@changesets/changelog-github", { "repo": "hadl-labs/changelog-github" }],
-  "commit": false,
+  "changelog": ["@hadl-labs/changelog-github", { "repo": "hadl-labs/changelog-github" }],
+  "commit": "./commit.js",
   "fixed": [],
   "linked": [],
-  "access": "restricted",
+  "access": "public",
   "baseBranch": "master",
   "updateInternalDependencies": "patch",
   "ignore": []
